--- a/retos/templates/retos/accounts/login.html
+++ b/retos/templates/retos/accounts/login.html
@@ -92,7 +92,7 @@
           target="_blank"
           rel="noopener noreferrer"
           href="#"
-          >AppSeed</a
+          >Retos</a
         >
       </p>
     </div>
