--- a/retos/templates/retos/includes/sidebar.html
+++ b/retos/templates/retos/includes/sidebar.html
@@ -90,7 +90,39 @@
       <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="#"> Tipo de Retos </a>
+            <a class="nav-link" href="/basic-tipo-retos.html">
+              Tipo de Retos
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-table-farmacia-retos.html">
+              Farmacia Retos
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-empleado-retos.html">
+              Empleado Retos
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-empleado-retos.html">
+              Reto Farmacia sin iniciar
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-empleado-retos.html">
+              Producto Retos
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-empleado-retos.html">
+              Informe Cab. de Retos
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/basic-empleado-retos.html">
+              Informe regalos Retos
+            </a>
           </li>
         </ul>
       </div>
