--- a/core/templates/basic-tipo-retos.html
+++ b/core/templates/basic-tipo-retos.html
@@ -7,44 +7,132 @@
   href="/static/assets/vendors/iconfonts/font-awesome/css/font-awesome.min.css"
 />
 
+<!-- Botón en HTML (lanza el modal en Bootstrap) -->
+<a href="#aggReto" data-toggle="modal"
+  ><p class="card-description">Add Reto ++<i class="fa fa-plus-square"></i></p
+></a>
+
+<!-- Modal / Ventana / Overlay en HTML -->
+<div id="aggReto" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-hidden="true"
+        >
+          &times;
+        </button>
+        <h4 class="modal-title"></h4>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <h2>Agregar Reto</h2>
+
+          <div class="tab-content">
+            <div id="home" class="tab-pane active">
+              <form >
+                <div class="form-row">
+                  <div class="col-md-4 mb-3">
+                    <label for="validationDefault01">Descripción</label>
+                    <input
+                      class="form-control"
+                      id="validationDefault01"
+                      placeholder="Descripción"
+                      value="Reto"
+                      required
+                    ></input>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <label for="validationDefault02">Numero Productos</label>
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="validationDefault02"
+                      placeholder="Numero de Productos"
+                      value="Otto"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">Activo</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>SI</option>
+                    <option>NO</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="invalidCheck2"
+                      required
+                    />
+                    <label class="form-check-label" for="invalidCheck2">
+                      Agree to terms and conditions
+                    </label>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                  Cerrar
+                </button>
+                <button class="btn btn-primary" type="submit">
+                  Guardar
+                </button>
+      </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="content-wrapper">
-  <div class="row">
-    <div class="col-lg-11 grid-margin stretch-card">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">Tipos de Retos</h4>
-          <p class="card-description">
-            Add Reto <i class="fa fa-plus-square"></i>
-          </p>
-          <table class="table table-hover">
+  <!-- Page Title Header Starts-->
+  <div class="row page-title-header">
+    <div class="col-12">
+      <div class="page-header">
+        <h4 class="page-title">Tipo De Retos</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12 grid-margin">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <a href="#"
+            ><small>
+              <p class="card-description">
+                Add Reto <i class="fa fa-plus-square"></i></p></small
+          ></a>
+        </div>
+        <p>Tipos de retos</p>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
             <thead>
               <tr>
                 <th>Código</th>
                 <th>Descripción</th>
                 <th>Numero de Productos Retos</th>
                 <th>Activo</th>
-                <th>Deadline</th>
                 <th>Accion</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>7</td>
-                <td>Henry Tom</td>
-                <td>
-                  <div class="progress">
-                    <div
-                      class="progress-bar bg-warning"
-                      role="progressbar"
-                      style="width: 20%"
-                      aria-valuenow="20"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                    ></div>
-                  </div>
-                </td>
-                <td>$ 150.00</td>
-                <td>June 16, 2015</td>
+                <td>INV-87239</td>
+                <td>Viola Ford</td>
+                <td>Paid</td>
+                <td>si</td>
                 <td>
                   <button type="button" class="btn btn-primary">Ver</button>
                   <button type="button" class="btn btn-success">Editar</button>
@@ -56,48 +144,10 @@
         </div>
       </div>
     </div>
-    <!-- <div class="card">
-      <div class="card-body">
-        <div class="d-flex justify-content-between pb-3">
-          <h4 class="card-title mb-0">Activities</h4>
-          <p class="mb-0 text-muted">20 finished, 5 remaining</p>
-        </div>
-        <ul class="timeline">
-          <li class="timeline-item">
-            <p class="timeline-content">
-              <a href="#">Ben Tossell</a> assign you a task
-            </p>
-            <p class="event-time">Just now</p>
-          </li>
-          <li class="timeline-item">
-            <p class="timeline-content">
-              <a href="#">Ben Tossell</a> assign you a task
-            </p>
-            <p class="event-time">Just now</p>
-          </li>
-          <li class="timeline-item">
-            <p class="timeline-content">
-              <a href="#">Ben Tossell</a> assign you a task
-            </p>
-            <p class="event-time">Just now</p>
-          </li>
-          <li class="timeline-item">
-            <p class="timeline-content">
-              <a href="#">Ben Tossell</a> assign you a task
-            </p>
-            <p class="event-time">Just now</p>
-          </li>
-          <li class="timeline-item">
-            <p class="timeline-content">
-              <a href="#">Ben Tossell</a> assign you a task
-            </p>
-            <p class="event-time">Just now</p>
-          </li>
-        </ul>
-        <a class="d-block mt-3" href="#">Show all</a>
-      </div>
-    </div> -->
   </div>
+</div>
+<div class="content-wrapper">
+  <div class="row"></div>
 </div>
 
 {% endblock content %}
