--- a/retos/templates/retos/includes/navigation.html
+++ b/retos/templates/retos/includes/navigation.html
@@ -65,9 +65,9 @@
       </li>
     </ul> -->
     <form class="ml-auto search-form d-none d-md-block" action="#">
-      <!-- <div class="form-group">
+      <div class="form-group">
         <input type="search" class="form-control" placeholder="Search Here" />
-      </div> -->
+      </div>
     </form>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
@@ -214,7 +214,7 @@
         >
           <img
             class="img-xs rounded-circle"
-            src="/static/assets/images/faces/face6.jpg"
+            src="/static/assets/images/faces/face8.jpg"
             alt="Profile image"
           />
         </a>
@@ -225,7 +225,7 @@
           <div class="dropdown-header text-center">
             <img
               class="img-md rounded-circle"
-              src="/static/assets/images/faces/face6.jpg"
+              src="/static/assets/images/faces/face8.jpg"
               alt="Profile image"
             />
             <p class="mb-1 mt-3 font-weight-semibold">
@@ -235,11 +235,11 @@
               {{ request.user.email }}
             </p>
           </div>
-          <a href="profile/{{ request.user.id }}" class="dropdown-item"
+          <a href="#" class="dropdown-item"
             >Mi Perfil<i class="dropdown-item-icon ti-dashboard"></i
           ></a>
           <a href="#" class="dropdown-item"
-            >Nuevo Personal<span class="badge badge-pill badge-danger">2</span
+            >Nuevo Personal<span class="badge badge-pill badge-danger"></span
             ><i class="dropdown-item-icon ti-comment-alt"></i
           ></a>
           <a href="{% url 'logout' %}" class="dropdown-item"
